# genepriority

./: Dockerfile  README.md  docker-compose.yaml  example.py  main.py  nega.Dockerfile  pyproject.toml  requirements.txt  tensorboard.Dockerfile
.github/workflows/: tests.yml
NEGradient-GenePriority/: evaluation.py  metrics.py  preprocessing.py
NEGradient_GenePriority/: __init__.py  evaluation.py  metrics.py  postprocessing.py  preprocessing.py  utils.py
NEGradient_GenePriority/compute_models/: README.md  macau.py  matrix_completion_result.py  smc.py
NEGradient_GenePriority/evaluation/: __init__.py  compute.py  evaluation.py  evaluation_result.py  metrics.py  results.py  trainer.py
NEGradient_GenePriority/postprocessing/: __init__.py  dataframes.py  figures.py  model_evaluation_collection.py  plots.py
NEGradient_GenePriority/preprocessing/: __init__.py  data_loader.py  dataloader.py  indices.py  preprocessing.py  side_information_loader.py  train_test_indices.py  train_test_masks.py  train_val_test_mask.py  utils.py
NEGradient_GenePriority/scripts/: __init__.py  genehound.py  nega.py  non_euclidean_gradient.py
NEGradient_GenePriority/trainer/: __init__.py  base.py  macau_trainer.py  neg_trainer.py
ci/: Dockerfile  dependencies.sh  install_smurff.sh
configurations/: omim.yaml  post.yaml
configurations/genehound/: meta.yaml  post.yaml
configurations/imc/: meta.yaml
configurations/nega/: README.md  meta.yaml
data/: data.py
experiments/: genehound.py  non-euclidean-gradient.py  non_euclidean_gradient.py
genepriority/: __init__.py  utils.py
genepriority/compute_models/: README.md  __init__.py  macau.py  smc.py
genepriority/evaluation/: __init__.py  evaluation.py  metrics.py  results.py
genepriority/models/: __init__.py  base_nega.py  early_stopping.py  flip_labels.py  macau.py  nega.py  side_information_nega.py  smc.py  standard_nega.py  utils.py
genepriority/postprocessing/: __init__.py  dataframes.py  figures.py  model_evaluation_collection.py
genepriority/preprocessing/: __init__.py  dataloader.py  preprocessing.py  side_information_loader.py  train_val_test_mask.py
genepriority/scripts/: baseline.py  genehound.py  genepriority.py  nega.py  parsers.py  post.py  profiling.py  (+1 more)
tests/: test_dataloader.py  test_evaluation.py  test_model_evaluation_collection.py  test_preprocessing.py  test_result.py  test_results.py
(+55 files in other folders)
