[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genepriority"
readme = "README.md"
description = "Implements matrix completion algorithms for gene prioritization on the OMIM gene-disease matrix"
classifiers = ["Programming Language :: Python :: 3.11"]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.scripts]
genepriority = "genepriority.scripts.genepriority:main"

[tool.setuptools]
packages = [
    "genepriority",
    "genepriority.evaluation",
    "genepriority.postprocessing",
    "genepriority.preprocessing",
    "genepriority.trainer",
    "genepriority.models",
    "genepriority.scripts"
]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = ["."]
