[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genepriority"
readme = "README.md"
description = "Implements matrix completion algorithms for gene prioritization on the OMIM gene-disease matrix"
classifiers = ["Programming Language :: Python :: 3.11"]
requires-python = ">=3.11,<3.13"
dynamic = ["version", "dependencies"]

[project.scripts]
genepriority = "genepriority.scripts.genepriority:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = ["src"]
