[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "genepriority"
readme = "README.md"
description = "Implements matrix completion algorithms for gene prioritization on the OMIM gene-disease matrix"
classifiers = ["Programming Language :: Python :: 3.11"]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[project.scripts]
genepriority = "genepriority.scripts.genepriority:main"
genepExp = "genepriority.script.run_experiments:main"
genepriority = "genepriority.script.run_post:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = ["src"]
